--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<style type="text/css">
 		body{font-family:sans-serif; line-height:28px;}
 		.bamboos{height:83px}
-		.bamboo{background:url('bamboo.png'); width:39px; height:83px; position: absolute;}
+		.bamboo{background:url('/images/bamboo.png'); width:39px; height:83px; position: absolute;}
 	</style>
 </head>
 <body>
@@ -41,7 +41,7 @@
 	<a href="#" class="lnkCSS">CSS Animation</a> <br>
 	<a href="#" class="lnkCSSReflow">CSS Reflow Reduzido</a-->
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-	<script type="text/javascript" src="requestAnimationFrame.js"></script>
+	<script type="text/javascript" src="/javascripts/requestAnimationFrame.js"></script>
 	<script type="text/javascript">
 
 	(function($){
